[tool.poetry]
name = "chatgptapp"
version = "0.1.0"
description = ""
authors = ["mashharuki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.25.0"
openai = "0.27.4"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
